syntax = "proto3";
package modlogie.keyword;
import "google/protobuf/empty.proto";
import "messages.proto";
option csharp_namespace = "Modlogie.Api.Keywords";

service KeywordsService {
  rpc GetAll(GetAllRequest) returns (KeywordsReply);
  rpc Get(modlogie.messages.StringId) returns (KeywordReply);
  rpc Delete(modlogie.messages.StringId) returns (modlogie.messages.Reply);
  rpc Add(Keyword) returns (modlogie.messages.Reply);
  rpc UpdateUrl(Keyword) returns (modlogie.messages.Reply);
  rpc UpdateDescription(Keyword) returns (modlogie.messages.Reply);
}

message GetAllRequest {
  string filter = 1;
  int32 skip = 2;
  int32 take = 3;
}

message Keyword {
  string id = 1;
  string url = 2;
  string description = 3;
}

message KeywordReply {
  modlogie.messages.Error error = 1;
  Keyword keyword = 2;
}

message KeywordsReply {
  modlogie.messages.Error error = 1;
  int32 total = 2;
  repeated Keyword keywords = 3;
}
