syntax = "proto3";
package modlogie.messages;
option csharp_namespace = "Modlogie.Api";

enum Error {
  NONE = 0;
  NEED_LOGIN = 1;
  NO_PERMISSION = 2;
  INVALID_USER_OR_PWD = 3;
  NO_SUCH_ENTITY = 4;
  ENTITY_CONFLICT = 5;
  INVALID_ARGUMENTS = 6;
  INVALID_OPERATION = 7;
}

message Reply { Error error = 1; }

message StringId { string Id = 1; }